# alocer

./: README.md  package-lock.json  package.json  patch.js  rollup.config.js
.github/workflows/: release.yml
bench/src/app/: page.tsx
src/deno/: mod.ts
src/deno/mods/: mod.ts
src/node/: index.ts
src/node/bench/: base16.bench.ts  base64.bench.ts  index.bench.ts
src/node/mods/: index.ts
src/node/test/: base16.test.ts  base58.test.ts  base64.test.ts  base64url.test.ts  index.test.ts
wasm/: Cargo.toml  alocer.wasm.js
wasm/pkg/: alocer.d.ts  alocer.js  alocer.wasm.js  alocer_bg.wasm  alocer_bg.wasm.d.ts  package.json
wasm/src/: base16.rs  base16ct.rs  base58.rs  base64.rs  base64_unpadded.rs  base64ct.rs  base64url.rs  base64url_unpadded.rs  lib.rs
